<resources>
    <string name="app_name">國際橡塑展</string>
    <string name="app_label"> </string>
    <string name="left_menu_user_login">預先登記觀眾登入</string>
    <string name="left_menu_login">登錄</string>
    <string name="left_menu_logout">登出</string>
    <string name="left_menu_sync">同步</string>
    <string name="loading_skip">跳過</string>
    <string name="login_title">觀眾登入</string>
    <string name="login_text1">請輸入預先登記的登入電郵及密碼</string>
    <string name="login_text2">登入名稱:</string>
    <string name="login_text3">密碼:</string>
    <string name="login_text4">登入</string>
    <string name="login_text5">忘記密碼</string>
    <string name="login_text6">如還未有觀眾登入帳號? 請即登記！</string>
    <string name="login_error_msg_1">請輸入\"登入名稱\"</string>
    <string name="login_error_msg_2">請輸入\"密碼\"</string>
    <string name="login_error_msg_3">登入名稱或密碼不正確，請重新輸入。</string>
    <string name="loading">載入中</string>
    <string name="loading...">載入中…</string>
    <string name="network_error">沒有網路</string>
    <string name="check_account_pw_title">請到已登記的電子郵件檢查登入帳號及密碼:</string>
    <string name="check_account_pw_msg">賬號已申請</string>
    <string name="data_bking">正在備份數據&#8230;</string>
    <string name="data_bk_success">備份完成</string>
    <string name="login_first_add_exhibitor">您需要登錄＂MyCHINAPLAS＂才能儲存展商紀錄到您的感興趣展商列表＂我的參展商＂。</string>
    <string name="login_first_add_schedule">您需要登錄＂MyCHINAPLAS＂才能添加議程，是否登錄？</string>
    <string name="login_first_save_note">您需要登錄＂MyCHINAPLAS＂才能保存筆記，是否登錄？</string>
    <string name="reg_reset">重置</string>
    <string name="reg_again">重來</string>
    <string name="reg_calendar">添加到日曆</string>
    <string name="reg_invoice">獲取發票</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="ts_date">2019年5月</string>
    <string name="title_my_account">用戶小工具</string>
    <string name="title_my_chinaplas">MyCHINAPLAS</string>
    <string name="title_my_exhibitor">我的參展商</string>
    <string name="title_schedule">我的日程表</string>
    <string name="title_my_name_card">我的名片</string>
    <string name="title_history_exhibitor">展商瀏覽紀錄</string>
    <string name="logout">登出</string>
    <string name="logout_message">確認登出?</string>
    <string name="syncMessage">在應用內的 [我的CHINAPLAS] 資料，將會跟CHINAPLASONLILNE.com的 [我的CHINAPLAS] 同步，請確認繼續。</string>
    <string name="syncStart">开始同步</string>
    <string name="syncSuccess">同步成功</string>
    <string name="syncFailure">同步失敗</string>
    <string name="schedule_title">標題</string>
    <string name="schedule_location">位置</string>
    <string name="schedule_startTime">時間</string>
    <string name="schedule_length">為時</string>
    <string name="schedule_note">筆記</string>
    <string name="schedule_hour">小時</string>
    <string name="schedule_minute">分鐘</string>
    <string name="schedule_save">儲存</string>
    <string name="schedule_del">刪除</string>
    <string name="schedule_date">2019年5月</string>
    <string name="schedule_exhibitor">參展商</string>
    <string name="schedule_event">同期活動</string>
    <string name="nodata">沒有相關信息</string>
    <string name="no_keyword_result">如需獲取所有展商列表，請前往內容更新中心更新展商資料庫。</string>
    <string name="seminar_room">會議室%s</string>
    <string name="btnSave">儲存</string>
    <string name="btnClear">清除所有</string>
    <string name="btnDel">删除</string>
    <string name="note_successful">成功儲存筆記</string>
    <string name="ask_clear_note">你確定想清除筆記?</string>
    <string name="ask_schedule">相同時間已儲存了另一個議程，繼續儲存?</string>
    <string name="not_title">標題不能為空</string>
    <string name="ScheduleInfo_lable">議程%1$s:</string>
    <string name="ScheduleInfo_startTime">時間:%1$s</string>
    <string name="item_all_exhibitor">全部參展商</string>
    <string name="item_criteria_search">分類搜索</string>
    <string name="item_keyword_search">關鍵字搜索</string>
    <string name="title_sort">劃</string>
    <string name="editFilter_hint">展商公司名/展台號</string>
    <string name="editFilter_hint_category">产品名称</string>
    <string name="txtAddCollection">加入我的參展商</string>
    <string name="txtAddCollection2">已經加到我的參展商</string>
    <string name="tab1">公司資料</string>
    <string name="tab0">關於</string>
    <string name="tab2">議程</string>
    <string name="tab3">筆記選項</string>
    <string name="added_exhibitor">已添加進我的參展商。</string>
    <string name="removed_exhibitor">已從我的參展商中移除。</string>
    <string name="booth">展覽攤位：</string>
    <string name="address">地址：</string>
    <string name="email">電郵：</string>
    <string name="tel">電話：</string>
    <string name="fax">傳真：</string>
    <string name="Website">網址：</string>
    <string name="description">描述</string>
    <string name="category">產品</string>
    <string name="application_cata">應用行業類別</string>
    <string name="application_exhi">應用行業</string>
    <string name="category_exhi">產品</string>
    <string name="new_tec_exhi">新技術產品</string>
    <string name="info_exhi">公司資料</string>
    <string name="about_exhi">關於</string>
    <string name="about_website">網址：</string>
    <string name="toast_floor_not_shown">詳細展館平面圖稍後公布。</string>
    <string name="toast_floor_download">為了更好的體驗平面圖功能，請您更新展館平面圖對應數據。</string>
    <string name="toast_floor_update">請您更新平面圖數據，以便獲取更准確的資料。</string>
    <string name="title_privacy">私隱政策聲明</string>
    <string name="title_user_item">使用條款</string>
    <string name="title_filter">篩選</string>
    <string name="filter_industry">產品類別</string>
    <string name="filter_application">應用行業</string>
    <string name="filter_country">國家/ 地區</string>
    <string name="filter_hall">展館</string>
    <string name="filter_booth">專區</string>
    <string name="filter_keyword">關鍵字</string>
    <string name="filter_topic_collection">主題專集</string>
    <string name="filter_new_tec">首發技術</string>
    <string name="filter_keyword_hint">輸入關鍵字</string>
    <string name="filter_highlights">展會亮點</string>
    <string name="filter_clear_all">清空篩選條件</string>
    <string name="filter_ok">篩選</string>
    <string name="filter_search">搜尋</string>
    <string name="new_tec_booth">展台號：%s</string>
    <string name="new_tec_ad">廣告商產品</string>
    <string name="filter_product">產品</string>
    <string name="filter_applications">應用</string>
    <string name="new_tec_Product_A">機械及儀器</string>
    <string name="new_tec_Product_B">化工及原料</string>
    <string name="new_tec_Product_C">2018 展會首發技術</string>
    <string name="card_phone">電話:</string>
    <string name="card_email">電子郵件:</string>
    <string name="card_qq">QQ:</string>
    <string name="card_wechat">微信:</string>
    <string name="card_title">職位:</string>
    <string name="save_card_to_list">存儲至名片列表</string>
    <string name="card_delete">刪除</string>
    <string name="card_back">返回</string>
    <string name="update_card">存儲及更新二維碼</string>
    <string name="create_card">創建名片</string>
    <string name="btn_edit_card">編輯</string>
    <string name="btn_scanner_card">二維碼掃描器</string>
    <string name="btn_all_card">全部名片列表</string>
    <string name="btn_delete_card">刪除</string>
    <string name="btn_save_to_contact">存儲至通訊錄</string>
    <string name="btn_export_name_card">導出名片</string>
    <string name="search_name_card">搜索</string>
    <string name="title_edit_name_card">編輯名片</string>
    <string name="card_name">姓名:</string>
    <string name="card_company">單位:</string>
    <string name="dialog_toast_update_namecard">名片列表中已經存在此名片，是否更新此名片資料？</string>
    <string name="title_all_name_card">名片列表</string>
    <string name="toast_input_name">請輸入"姓名"</string>
    <string name="toast_input_title">請輸入"職位"</string>
    <string name="toast_input_company">請輸入"單位"</string>
    <string name="toast_input_phone">請輸入"電話"</string>
    <string name="toast_input_country">請輸入"國家編碼"</string>
    <string name="toast_input_email">請輸入"電子郵件"</string>
    <string name="toast_input_phone_1">電話只允許輸入數字。</string>
    <string name="toast_input_phone_2">電話只允許輸入數字。</string>
    <string name="toast_input_country_1">國家編碼只允許輸入數字.</string>
    <string name="toast_input_email_1">請輸入有效的"電子郵件"</string>
    <string name="toast_input_name_1">輸入姓名時，請不要輸入數位或符號！</string>
    <string name="scan_qrcode_text">掃一掃上面的二維碼圖案，加我好友</string>
    <string name="loading_check_update">檢測到資料需要更新</string>
    <string name="download_map_update">檢測到展館平面圖有更新，請在WIFI環境下更新展館平面圖.</string>
    <string name="create_qrcode">創建二維碼</string>
    <string name="edit_qrcode">編輯</string>
    <string name="create">創建</string>
    <string name="my_qrcode">我的二維碼</string>
    <string name="qrcode_scanner">二維碼掃描器</string>
    <string name="qrcode_all">名片列表</string>
    <string name="qrcode_edit_save">保存&amp;更新二維碼</string>
    <string name="reg_reset_title">確定重置預登記信息?</string>
    <string name="reg_reset_confirm">重置</string>
    <string name="reg_reset_cancel">取消</string>
    <string name="scanner_tips">將二維碼放入框內，即可自動掃描</string>
    <string name="no_camera_permission">沒有照相機權限，無法掃描</string>
    <string name="skip">跳過&#160;&#160;<![CDATA[<font color=#FF0000>%1$ds</font>]]></string>
    <string name="event_btn_all">全部</string>
    <string name="event_btn_1">21</string>
    <string name="event_btn_2">22</string>
    <string name="event_btn_3">23</string>
    <string name="event_btn_4">24</string>
    <string name="event_date_24">2019.05.21</string>
    <string name="event_date_25">2019.05.22</string>
    <string name="event_date_26">2019.05.23</string>
    <string name="event_date_27">2019.05.24</string>
    <string name="event_date_base">2019.05.%s</string>
    <string name="tech_zone">A</string>
    <string name="tech_am">上午</string>
    <string name="tech_pm">下午</string>
    <string name="title_technical_seminar">技術交流會</string>
    <string name="seminar_information">技術交流會概要</string>
    <string name="seminar_speaker">演講者資料</string>
    <string name="seminar_contact">如有查詢，請聯絡：</string>
    <string name="seminar_email">演講者郵箱</string>
    <string name="seminar_tel">演講者電話</string>
    <string name="seminar_date">日期：%s</string>
    <string name="seminar_time">時段：%s</string>
    <string name="seminar_section">展館：%s</string>
    <string name="seminar_zone">區：%s</string>
    <string name="seminar_roomNO">會議室房號：%s</string>
    <string name="seminar_booth">展台號：%s</string>
    <string name="seminar_time_am">%s上午時段&#160;(10:00&#8211;12:00)</string>
    <string name="seminar_time_pm">%s下午時段&#160;(14:00&#8211;16:00)</string>
    <string name="uc_last_update_time">最後更新時間：%s</string>
    <string name="uc_file_size">文件大小：</string>
    <string name="uc_update">更新</string>
    <string name="uc_updated">已更新</string>
    <string name="uc_update_all">更新全部</string>
    <string name="apk_update_msg">檢測到新版本，是否更新？</string>
    <string name="apk_update_title">更新版本</string>
    <string name="apk_progress">%s%%</string>
    <string name="dc_download">下載</string>
    <string name="dc_open">打開</string>
    <string name="dc_downloading">下載中</string>
    <string name="subscribe_str001">訂閱資料</string>
    <string name="subscribe_str002">公司名稱</string>
    <string name="subscribe_str003">姓名</string>
    <string name="subscribe_str005">私隱政策聲明</string>
    <string name="register_str004">電郵</string>
    <string name="reg_submit">遞交</string>
    <string name="thx_dy">感謝您的訂閱</string>
    <string name="Registering_MSg">正在提交數據，請稍候！</string>
    <string name="register_msg001">請輸入"觀眾姓名"</string>
    <string name="register_msg002">輸入觀眾姓名時，請不要輸入數位或符號！</string>
    <string name="travel_detail_address">地址</string>
    <string name="travel_detail_tel">電話</string>
    <string name="travel_detail_email">電郵</string>
    <string name="travel_detail_website">網址</string>
    <string name="travel_detail_contact">聯繫人</string>
    <string name="travel_detail_remark">備註</string>
    <string name="title_exhibitor_deti">公司資料</string>
    <string name="title_add_schedule">添加議程</string>
    <string name="setting_website">網站連結</string>
    <string name="setting_add_to_calendar">添加到日曆</string>
    <string name="setting_reset_all">重置所有設定</string>
    <string name="setting_privacy_policy">私隱政策聲明</string>
    <string name="setting_use_terms">使用條款</string>
    <string name="drawer_sync">與官網同步</string>
</resources>