<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/img_qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/tv_qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/scan_qrcode_text"
                android:textColor="@color/gray_qrcode_tips" />

            <Button
                android:id="@+id/btn_edit"
                style="@style/myqrcode_btn_style"
                android:layout_marginTop="21dp"
                android:text="@string/edit_qrcode" />

            <Button
                android:id="@+id/btn_qrcode_scanner"
                style="@style/myqrcode_btn_style"
                android:text="@string/qrcode_scanner" />

            <Button
                android:id="@+id/btn_allname_card"
                style="@style/myqrcode_btn_style"
                android:layout_marginBottom="16dp"
                android:text="@string/qrcode_all" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>